--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,11 @@
 title: "Pawel Kazubski Free Blog + CV"
 author: "Pawel Kazubski"
-description: "Some short description of your blog can go here." # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
+description: "This is blog and CV made in class for practicing purposes" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "example@mail.com"
-twitter_username: "twitteruser"
-github_username: "githubuser"
-linkedin_username: "linkedinuser"
-#facebook_username: username
-#flickr_username: username
-#instagram_username: username
-#pinterest_username: username
-#youtube_username: username
-#googleplus_username: +username
+email: "pawelkazub@gmail.com"
+linkedin_username: "https://www.linkedin.com/in/pawelkazubski/"
 
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
